# PokemonBlueExperiments

./: .gitignore  README.md  data.yaml  mapping.json  pyproject.toml  requirements.txt  run_agent.py  test_battle.py  test_emu.py  train_yolo.py
docs/: architecture.md  data_processing.md  index.html  knowledge_graph.md  pipeline.md  pitch.md  pokemon_first_badge.html  pokemon_graph.html  pokemon_graph_first_badge.html  ram_map.md  roadmap.md  vision_pipeline.md
scripts/: benchmark_envs.py
src/: data_qa_cleaning.py  train_yolo.py
src/agent/: __init__.py  battle_agent.py  custom_policy.py  exploration_agent.py  go_explore.py  monitoring.py  orchestrator.py  vectorization.py  video_callback.py  waypoints.py
src/emulator/: pokemon_env.py  ram_map.py
src/knowledge/: __init__.py  builder.py  gen1_data.py  graph.py
src/utils/: audit_states.py  check_dataset_quality.py  check_single_state.py  create_checkpoints.py  debug_ram.py  debug_visualizer.py  dump_states.py  extract_map_data.py  find_door.py  make_save.py  play_state.py  purge_corrupted.py  verify_map_data.py
src/vision/: debug_live_generator.py  generate_dataset.py  split_data.py  test_inference.py  visualize_dataset.py
tests/: conftest.py  test_action_mask.py  test_emu.py  test_env_step.py  test_go_explore.py  test_gym.py  test_gym_visual.py  test_reward_components.py
utils/: create_curriculum_states.py
