[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pokemon-blue-experiments"
version = "0.1.0"
description = "Autonomous Pokémon Blue AI Agent using Reinforcement Learning & Computer Vision"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Maxime", email = "9865@holbertonstudents.com"}
]
keywords = ["pokemon", "reinforcement-learning", "computer-vision", "yolo", "game-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "pyboy>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "opencv-python-headless>=4.8.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "ultralytics>=8.0.0",
    "gymnasium>=0.28.0",
    "stable-baselines3>=2.0.0",
    "shimmy>=1.0.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pyright>=1.1.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ipykernel>=6.25.0",
]

[project.urls]
Homepage = "https://github.com/MaKSiiMe/PokemonBlueExperiments"
Repository = "https://github.com/MaKSiiMe/PokemonBlueExperiments"
Documentation = "https://github.com/MaKSiiMe/PokemonBlueExperiments/tree/main/docs"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (temporaire pour migration)
]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "data",
    "datasets",
    "models",
    "runs",
    "debug_output",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.pyright]
pythonVersion = "3.9"
include = ["src"]
exclude = [
    "**/__pycache__",
    ".venv",
    "data",
    "datasets",
    "models",
]
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
]
